--- a/main.html
+++ b/main.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+    <h2>Job Application Form</h2>
+    <form action="#" method="POST">
+        <div>
+            <label for="name">Name*: </label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div>
+            <label for="email">Email*: </label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div>
+            <fieldset>
+                <legend>Gender*:</legend>
+                <input type="radio" id="male" name="gender" value="male" required>
+                <label for="male">Male</label>
+                <input type="radio" id="female" name="gender" value="female">
+                <label for="female">Female</label>
+                <input type="radio" id="other" name="gender" value="other">
+                <label for="other">Other</label>
+            </fieldset>
+        </div>
+        <div>
+            <label for="laptop">Laptop Brands:</label>
+            <select id="laptop" name="laptop">
+                <option value="Apple">Apple</option>
+                <option value="Asus">Asus</option>
+                <option value="HP">HP</option>
+            </select>
+        </div>
+        <div>
+            <label for="age">Age*: </label>
+            <input type="number" id="age" name="age" required>
+        </div>
+        <div>
+            <label for="dob">Date of Birth*: </label>
+            <input type="date" id="dob" name="dob" required>
+        </div>
+        <div>
+            <label for="password">Password*: </label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <div>
+            <label for="portfolio">Portfolio URL: </label>
+            <input type="url" id="portfolio" name="portfolio">
+        </div>
+        <div>
+            <button type="submit">Submit</button>
+        </div>
+    </form>
     <script type="text/javascript" src="./script.js">
-</script>
-
+    </script>
 </body>
 
 </html>
